add loading css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 </head><!--/head-->
 
 <body id="home" class="homepage">
-
+<div class="circle"></div>
+<div class="circle1"></div>
     <header id="header">
         <nav id="main-menu" class="navbar navbar-default navbar-fixed-top" role="banner">
             <div class="container">
@@ -45,7 +46,8 @@
                     <ul class="nav navbar-nav">
                         <li class="scroll active"><a href="#home">Home</a></li>
                         <li class="scroll"><a href="#features">Profile</a></li>
-                        <li class="scroll"><a href="#services">Member</a></li>
+                        <li class="scroll"><a href="#meet-team">Pengurus</a></li>
+                        <li class="scroll"><a href="#anggota">Member</a></li>
                         <li class="scroll"><a href="#portfolio">Gallery</a></li>
                         <li class="scroll"><a href="#get-in-touch">Contact</a></li>                        
                     </ul>
@@ -100,9 +102,7 @@
             <div class="row">
                 <div class="col-sm-4 wow fadeInLeft">
                     <h3 class="column-title">Visi</h3>
-                    <ul>
-                        <li>Menjalin komunikasi antar himpunan mahasiswa informatika guna menciptakan tujuan program studi informatika.</li>
-                    </ul>
+                    <p> Menjalin komunikasi antar himpunan mahasiswa informatika guna menciptakan tujuan program studi informatika.</p>
                 </div>
                 <div class="col-sm-4 wow fadeInLeft">
                     <!--<div class="media service-box wow fadeInRight">
@@ -251,7 +251,7 @@
 
             <div class="divider"></div>
 
-            <div class="row">
+            <div class="row" id="anggota">
                 <div class="col-sm-12">
                     <h3 class="column-title">Anggota FORKOMIF</h3>
                     <img src="https://dummyimage.com/100x100/000/fff" alt="">
@@ -381,7 +381,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title text-center wow fadeInDown">Get in Touch</h2>
-                <p class="text-center wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
+                <p class="text-center wow fadeInDown">Let's get to know more about us</p>
             </div>
         </div>
     </section><!--/#get-in-touch-->
@@ -397,10 +397,9 @@
                             <h3>Contact Info</h3>
 
                             <address>
-                              <strong>Twitter, Inc.</strong><br>
-                              795 Folsom Ave, Suite 600<br>
-                              San Francisco, CA 94107<br>
-                              <abbr title="Phone">P:</abbr> (123) 456-7890
+                              <strong>FORKOMIF</strong><br>
+                              Jl. Bendungan Sutami No.188 Malang, Jawa Timur<br>
+                              <abbr title="Phone">P:</abbr> +62 341 551 149
                             </address>
 
                             <form id="main-contact-form" name="contact-form" method="post" action="#">
